--- a/assets/sass/components/_icon.scss
+++ b/assets/sass/components/_icon.scss
@@ -1,6 +1,6 @@
 .icon {
   &.arrow-icon {
-    display: inline-block;
+    display: inline-flex;
     width: 15px;
     height: 12px;
   }
