--- a/assets/sass/sections/_cell.scss
+++ b/assets/sass/sections/_cell.scss
@@ -62,6 +62,7 @@
   }
   &__slides {
     position: relative;
+    z-index: 1;
     &-item {
       position: absolute;
       top: 0;
@@ -74,8 +75,8 @@
       opacity: 0;
       z-index: -1;
       &.active {
-        opacity: 1;
-        z-index: 1;
+        // opacity: 1;
+        z-index: 10;
       }
     }
   }
