--- a/assets/sass/sections/_menu.scss
+++ b/assets/sass/sections/_menu.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 80%;
-  height: 100%;
+  height: 100vh;
   padding: 50px 27px;
   transform: translateX(100%);
   opacity: 0;
